--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,13 @@ language: d
 d:
   - ldc
   - ldc-beta
+  - ldc-1.10.0
+  - ldc-1.9.0
   - ldc-1.8.0
   - dmd
   - dmd-nightly
+  - dmd-2.081.1
+  - dmd-2.080.1
   - dmd-2.079.1
   - dmd-2.078.3
 
