--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,13 @@ language: d
 d:
   - ldc
   - ldc-beta
+  - ldc-1.17.0
   - ldc-1.10.0
   - ldc-1.9.0
   - ldc-1.8.0
   - dmd
   - dmd-nightly
+  - dmd-2.087.1
   - dmd-2.081.1
   - dmd-2.080.1
   - dmd-2.079.1
@@ -36,6 +38,10 @@ matrix:
     - d: ldc
       os: osx
     - d: ldc-beta
+      os: osx
+    - d: ldc-1.10.0
+      os: osx
+    - d: ldc-1.9.0
       os: osx
     - d: ldc-1.8.0
       os: osx
